test/sema/main_redeclared.yl
// RUN: yl %s 2>&1 -res-dump | FileCheck %s
fn main(): void {}

// CHECK: [[# @LINE + 1 ]]:1: error: redeclaration of 'main'
fn main(): void {}
